# rice-eclipse-mk1-1

./: .gitattributes  .gitignore  Hello World.rtf  LICENSE  README.md
Mk1_/: gui
eagle/: .gitignore
eagle/rice-eclipse-mk-1-1/: .main.sch.lck  eagle.epf  main.brd  main.sch
eagle/rice-eclipse-mk-1-1-side/rice-eclipse-mk-1-1-side/: eagle.epf  sideboard.brd  sideboard.sch
eagle/rice-eclipse-mk1-1-lib/: SLIDE_SW.lbr  analog-devices-extra-AD7124-8BCPZ.lbr  con-phoenix-250-extra.lbr  con-phoenix-500-extra.lbr  diodes-extra.lbr  microchip-extra.lbr  pot-extra.lbr  st-microelectronics-extra.lbr  texas-extra.lbr  transistor-fet-extra.lbr
mk1_gui/: concurrency.py  graph_constants.py  gui_final.py  gui_integrate.py  gui_timstamp.py  logger.py  networking.py  sampleCode.py  server_info.py  socket_server.py  timestamp_debug.py
software/: .gitignore  CMakeLists.txt  easy_build.sh
software/src/: .blink.cpp.swp  CMakeLists.txt  build.sh  main.cpp
software/src/adc/: CMakeLists.txt  adc_block.cpp  adc_block.hpp  adc_test.cpp  threaded_adc_test.cpp
software/src/adc/lib/: CMakeLists.txt  adc_block.cpp  adc_block.hpp
software/src/blink/: blink.cpp
software/src/comm/: Ipi_server.hpp  simple_sender_server.cpp  simple_server.cpp
software/src/counter/: CMakeLists.txt  counter_worker.cpp  counter_worker.hpp  network_counter_worker.cpp  network_counter_worker.hpp  threaded_counter.cpp
software/src/echo_server/: CMakeLists.txt  echo_server.cpp  echo_worker.cpp  echo_worker.hpp  listener.cpp  network_echo_worker.cpp  network_echo_worker.hpp
software/src/final/: CMakeLists.txt  initialization.cpp  initialization.hpp  main.cpp  main_network_worker.cpp  main_network_worker.hpp  main_worker.cpp  main_worker.hpp  pins.cpp  pins.hpp
software/src/server/: network_worker.cpp  network_worker.hpp  queue_items.hpp  safe_queue.hpp  worker.hpp
software/src/spi/: spi.c  spi.cpp
software/src/util/: CMakeLists.txt  circular_buffer.cpp  circular_buffer.hpp  listener.cpp  listener.hpp  logger.cpp  logger.hpp  timestamps.cpp  timestamps.hpp
software/test/: CMakeLists.txt  catch_main.cpp
software/test/circular_buffer/: CMakeLists.txt  circular_buffer_test.cpp
software/test/threaded_circular_buffer/: CMakeLists.txt  threaded_circular_buffer_test.cpp
